--- a/README.html
+++ b/README.html
@@ -123,6 +123,16 @@ previous Raspberry Pi models. See this <a href=
 "https://pip.raspberrypi.com/categories/685-app-notes-guides-whitepapers/documents/RP-006553-WP/A-history-of-GPIO-usage-on-Raspberry-Pi-devices-and-current-best-practices.pdf">
 Application Note</a> for more information.</p>
 </li>
+<li>
+<p>12 February 2025 -- Added <b><a href=
+"https://git.kernel.org/pub/scm/libs/libgpiod/libgpiod.git/tree">libgpiod</a></b>
+to the toolchain libraries packages
+<b><tt>gcc-*-muntsos-linux-gnu-ctng-libs</tt></b> and added the <b>libgpiod</b>
+runtime extension package. Because they use the same <b><tt>ioctl()</tt></b>
+services, <b>libgpiod</b> and <b>libsimpleio</b> interoperate without any
+problems. Note that this <b>libgpiod</b> is newer than that in Debian 12
+(Bookworm), including Raspberry Pi OS.</p>
+</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
