Upgraded the Raspberry Pi kernel to 6.6.78.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22841 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -133,6 +133,10 @@ services, <b>libgpiod</b> and <b>libsimpleio</b> interoperate without any
 problems. Note that this <b>libgpiod</b> is newer than that in Debian 12
 (Bookworm), including Raspberry Pi OS.</p>
 </li>
+<li>
+<p>17 February 2025 -- Upgraded the .Net Runtime to 9.0.2. Upgraded the
+Raspberry Pi kernel to 6.6.78.</p>
+</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
