Added Application Note #19
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22943 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -283,12 +283,14 @@ socket, a <a href="https://www.sparkfun.com/qwiic">QWIIC</a> socket, and a
 of a general purpose expansion header. It has a Texas Instruments AM6254 ARMv8
 Cortex-A53 quad core CPU and comes with 2 GB of RAM. The BeaglePlay has one
 USB-A receptacle for peripheral devices and one USB-C receptacle for power and
-tethering as well as a <a href=
+tethering. It has a 10/100/1000BASE-T wired Ethernet interface, a <a href=
 "https://www.analog.com/en/resources/technical-articles/the-new-10base-t1l-standard.html">
 10Base-T1L</a> single pair Ethernet interface (intended for a factory
 automation network and worthless for any other purpose), and a <a href=
 "https://www.ti.com/product/CC1352P">CC1352P7</a> wireless microcontroller
-capable of supporting a wide variety of radio networks.</p>
+capable of supporting a wide variety of radio networks. See <a href=
+"http://git.munts.com/muntsos/doc/AppNote19-BeaglePlay.pdf">Application Note
+#19</a> for more information.</p>
 <h5>USB Gadgets</h5>
 <p>You will need to edit <b><tt>/boot/config.txt</tt></b> to enable USB Gadget
 mode. Change the <b><tt>OPTIONS</tt></b> word to <b><tt>0x132C</tt></b> for a
