Changed 10Base to 10BASE
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22949 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -285,7 +285,7 @@ Cortex-A53 quad core CPU and comes with 2 GB of RAM. The BeaglePlay has one
 USB-A receptacle for peripheral devices and one USB-C receptacle for power and
 tethering. It has a 10/100/1000BASE-T wired Ethernet interface, a <a href=
 "https://www.analog.com/en/resources/technical-articles/the-new-10base-t1l-standard.html">
-10Base-T1L</a> single pair Ethernet interface (intended for a factory
+10BASE-T1L</a> single pair Ethernet interface (intended for a factory
 automation network and worthless for any other purpose), and a <a href=
 "https://www.ti.com/product/CC1352P">CC1352P7</a> wireless microcontroller
 capable of supporting a wide variety of radio networks. See <a href=
