Added Application Note #20
Orange Pi Zero 2W Target Platform Notes


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22952 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -307,7 +307,9 @@ the <a href=
 2 W</a>, making it ideal for embedded system projects. It has a 1500 MHz
 Allwinner H618 ARMv8 Cortex-A53 quad-core CPU and comes with 1 to 4 GB of RAM
 and on-board Bluetooth and WiFi radios. It is available for sale on Amazon for
-$21.99 (1 GB RAM) to $33.99 (4 GB RAM).</p>
+$21.99 (1 GB RAM) to $33.99 (4 GB RAM). See <a href=
+"http://git.munts.com/muntsos/doc/AppNote20-OrangePiZero2W.pdf">Application
+Note #20</a> for more information.</p>
 <p>The much larger RAM is a big advantage and I have been able to purchase as
 many as I want without limits when the Raspberry Pi Zero 2 W has been
 unavailable. Unfortunately, the manufacturer <a href=
