Minor edit to news item
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22954 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -162,8 +162,8 @@ to the <a href="http://repo.munts.com/muntsos/attic">attic.</a></p>
 <p>23 February 2025 -- Added initial support for the 64-bit <a href=
 "https://www.beagleboard.org/boards/beagleplay">BeaglePlay</a>. Next up will
 probably be the 64-bit <a href="https://riscv.org">RISC-V</a> <a href=
-"https://www.waveshare.com/wiki/VisionFive2">VisionFive 2</a>. I have
-successfully built a GCC 14.2.0 <b><tt>riscv64</tt></b> cross-toolchain for
+"https://www.waveshare.com/wiki/VisionFive2">VisionFive 2</a>. I have already
+built a GCC 14.2.0 <b><tt>riscv64</tt></b> cross-toolchain for
 <b>MuntsOS</b>.</p>
 </li>
 </ul>
