Support for BeaglePlay is now done.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22957 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -161,10 +161,15 @@ to the <a href="http://repo.munts.com/muntsos/attic">attic.</a></p>
 <li>
 <p>23 February 2025 -- Added initial support for the 64-bit <a href=
 "https://www.beagleboard.org/boards/beagleplay">BeaglePlay</a>. Next up will
-probably be the 64-bit <a href="https://riscv.org">RISC-V</a> <a href=
+probably be the 64-bit <a href=
 "https://www.waveshare.com/wiki/VisionFive2">VisionFive 2</a>. I have already
 built a GCC 14.2.0 <b><tt>riscv64</tt></b> cross-toolchain for
 <b>MuntsOS</b>.</p>
+</li>
+<li>
+<p>4 March 2025 -- Support for the BeaglePlay is now done. See <a href=
+"http://git.munts.com/muntsos/doc/AppNote19-BeaglePlay.pdf">Application Note
+#19</a> for more information.</p>
 </li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
