--- a/README.html
+++ b/README.html
@@ -293,9 +293,14 @@ tethering. It has a 10/100/1000BASE-T wired Ethernet interface, a <a href=
 10BASE-T1L</a> single pair Ethernet interface (intended for a factory
 automation network and worthless for any other purpose), and a <a href=
 "https://www.ti.com/product/CC1352P">CC1352P7</a> wireless microcontroller
-capable of supporting a wide variety of radio networks. See <a href=
+capable of supporting a wide variety of radio networks.</p>
+<p>The BeaglePlay has a couple of serious design defects: The AM6254 CPU
+hardware watchdog timers are unusable and the <a href=
+"https://www.ti.com/product/ADC102S051">ADC102S051</a> A/D converter has only
+10 bits resolution and lacks a Linux kernel driver. For more information, good
+and bad, see <a href=
 "http://git.munts.com/muntsos/doc/AppNote19-BeaglePlay.pdf">Application Note
-#19</a> for more information.</p>
+#19</a>.</p>
 <h5>USB Gadgets</h5>
 <p>You will need to edit <b><tt>/boot/config.txt</tt></b> to enable USB Gadget
 mode. Change the <b><tt>OPTIONS</tt></b> word to <b><tt>0x132C</tt></b> for a
