--- a/README.html
+++ b/README.html
@@ -171,6 +171,10 @@ built a GCC 14.2.0 <b><tt>riscv64</tt></b> cross-toolchain for
 "http://git.munts.com/muntsos/doc/AppNote19-BeaglePlay.pdf">Application Note
 #19</a> for more information.</p>
 </li>
+<li>
+<p>6 March 2025 -- Finally got around to completing a couple of loose ends for
+the Raspberry Pi CM5 on a CM5IO. This has proven to be a very nice setup.</p>
+</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the <b>MuntsOS</b> cross-toolchain development
